tests/pact/bad/bad-cap-import-fqn.repl
; Capabilities should ot be accessible via FQN across modules
(begin-tx)
(module m A

  (defcap A () true)

)
(commit-tx)

(module n B

  (defcap B () m.A)
)
